--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "express": "^4.17.3",
+    "mongoose": "^6.2.3",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
