--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
