--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
-{
+{	
+	"liveSassCompile.settings.excludeList": [
+	"path/subpath/*[!(file1|file2)].scss"
+],
 	"[scss]": {
 	  "editor.tabSize": 2
 	},
@@ -17,4 +20,4 @@
 	"[less]": {
 	  "editor.tabSize": 2
 	}
-  }
+}
