--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dot-env": "^0.0.1",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
