--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-rate-limit": "^6.3.0",
     "hcaptcha": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
