--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/emoji-mart": "^3.0.9",
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "@types/react-twemoji": "^0.4.0",
     "axios": "^0.26.0",
     "dot-env": "^0.0.1",
+    "emoji-mart": "^3.0.1",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
@@ -24,6 +27,7 @@
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-twemoji": "^0.4.1",
     "redux": "^4.1.2",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
