--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "hcaptcha": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "node-fetch": "^2.6.7",
     "socket.io": "^4.4.1"
   },
   "devDependencies": {
