--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/jest": "^27.4.0",
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
     "@types/react-twemoji": "^0.4.0",
     "axios": "^0.26.0",
     "dot-env": "^0.0.1",
@@ -57,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^17.0.14"
   }
 }
