--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dot-env": "^0.0.1",
     "emoji-mart": "^3.0.1",
     "framer-motion": "^6.2.8",
+    "get-average-color": "^0.0.6",
     "react": "^18.0.0",
     "react-confetti": "^6.0.1",
     "react-dom": "^18.0.0",
@@ -28,6 +29,7 @@
     "react-scripts": "5.0.0",
     "react-twemoji": "^0.4.1",
     "redux": "^4.1.2",
+    "save": "^2.4.0",
     "socket.io-client": "^4.4.1",
     "typescript": "^4.5.5",
     "typewriter-effect": "^2.18.2",
