--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-rate-limit": "^6.3.0",
+    "fast-average-color-node": "^2.2.0",
     "hcaptcha": "^0.1.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
